--- a/styles/global.css
+++ b/styles/global.css
@@ -67,3 +67,9 @@ footer {
   bottom: 0;
   position: sticky;
 }
+
+@media(max-width: 600px) {
+  footer {
+    position: relative;
+  }
+}
